<resources>
    <string name="app_name">Running-Tracker</string>
    <string name="google_maps_key" translatable="false">AIzaSyCpjmj8Auj2-A9em4xnsdsyChriJjNS_Vs</string>
    <string name="adds_a_new_run">adds a new run</string>
    <string name="your_name">Your Name</string>
    <string name="your_weight">Your Weight</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="welcome_please_enter_your_name_and_weight">Welcome!\n Please enter your name and weight.</string>
    <string name="kg">kg</string>
    <string name="_continue">Continue</string>
    <string name="total_distance">Total Distance</string>
    <string name="_0km">0km</string>
    <string name="total_time">Total Time</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="_0kcal">0kcal</string>
    <string name="average_speed">Average Speed</string>
    <string name="_0km_h">0km/h</string>
    <string name="let_s_go_username">Let\'s go, USERNAME!</string>
    <string name="finish_run">Finish Run</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="_00_00_00_00">00:00:00:00</string>
    <string name="the_journey_tracking_pic">the journey tracking pic</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="distance">DISTANCE</string>
    <string name="avg_speed">AVG-SPEED</string>
    <string name="calories">CALORIES</string>
    <string name="running_app">Running App</string>
    <string name="your_runs">Your Runs</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="sort_by">Sort by:</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="cancel_run_tracking">Cancel Run Tracking</string>
    <string name="duration">DURATION</string>
    <string name="calories_burned">CALORIES BURNED</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
</resources>